장바구니 품목 개선작업

--- a/cart/templates/cart/cart_list.html
+++ b/cart/templates/cart/cart_list.html
@@ -29,7 +29,7 @@
                         <th>이름</th>
                         <th>수량</th>
                         <th>가격</th>
-                        <th></th>
+                        <th>v</th>
                         </thead>
                         <tbody>
                         {% for cart_item in cart_items %}
@@ -49,7 +49,13 @@
                                 {{ cart_item.product_real.product.sale_price|intcomma }}
                             </th>
                             <th class="">
-                                <input type="checkbox" class="t-cursor-pointer t-scale-150">
+                                {% if request.user == user.author %}
+
+                                    <form action="">
+                                        <input type="checkbox" class="t-cursor-pointer t-scale-150">
+                                    </form>
+
+                                {% endif %}
                             </th>
 
                         </tr>
